--- a/HighFiProtos/AFleurDeuxPots802/src/afleurdeuxpots802/pages/accueil/AccueilPage.form
+++ b/HighFiProtos/AFleurDeuxPots802/src/afleurdeuxpots802/pages/accueil/AccueilPage.form
@@ -31,7 +31,7 @@
               <Component id="buttonPrecedent1" min="-2" max="-2" attributes="0"/>
           </Group>
           <Group type="102" alignment="1" attributes="0">
-              <EmptySpace pref="659" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
               <Component id="bouttonRuban1" min="-2" pref="19" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="bouttonRuban2" min="-2" pref="19" max="-2" attributes="0"/>
@@ -41,12 +41,17 @@
               <Component id="bouttonRuban4" min="-2" pref="19" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="316" max="-2" attributes="0"/>
           </Group>
+          <Group type="102" alignment="0" attributes="0">
+              <Component id="header1" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="94" max="-2" attributes="0"/>
+              <Component id="header1" min="-2" pref="203" max="-2" attributes="0"/>
+              <EmptySpace min="-2" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="3" attributes="0">
@@ -65,7 +70,7 @@
                   </Group>
                   <Component id="bouttonRuban2" min="-2" pref="31" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="466" max="32767" attributes="0"/>
+              <EmptySpace pref="351" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -111,6 +116,8 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bouttonRuban4ActionPerformed"/>
       </Events>
+    </Component>
+    <Component class="afleurdeuxpots802.header.Header" name="header1">
     </Component>
   </SubComponents>
 </Form>
