--- a/HighFiProtos/AFleurDeuxPots802/src/afleurdeuxpots802/pages/accueil/AccueilPage.form
+++ b/HighFiProtos/AFleurDeuxPots802/src/afleurdeuxpots802/pages/accueil/AccueilPage.form
@@ -96,6 +96,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Image"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="imageRubanMouseClicked"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="bouttonRuban1">
       <Events>
