--- a/HighFiProtos/AFleurDeuxPots802/src/afleurdeuxpots802/pages/accueil/AccueilPage.form
+++ b/HighFiProtos/AFleurDeuxPots802/src/afleurdeuxpots802/pages/accueil/AccueilPage.form
@@ -24,6 +24,10 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
+              <Component id="header1" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+          </Group>
+          <Group type="102" alignment="1" attributes="0">
               <Component id="buttonPrecedent" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="imageRuban" max="32767" attributes="0"/>
@@ -32,18 +36,19 @@
           </Group>
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="32767" attributes="0"/>
-              <Component id="bouttonRuban1" min="-2" pref="19" max="-2" attributes="0"/>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Component id="bouttonRuban2" min="-2" pref="19" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="bouttonRuban3" min="-2" pref="19" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="1" attributes="0">
+                  <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <Component id="bouttonRuban1" min="-2" pref="19" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="bouttonRuban2" min="-2" pref="19" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="bouttonRuban3" min="-2" pref="19" max="-2" attributes="0"/>
+                  </Group>
+              </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="bouttonRuban4" min="-2" pref="19" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="316" max="-2" attributes="0"/>
-          </Group>
-          <Group type="102" alignment="0" attributes="0">
-              <Component id="header1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="322" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -52,25 +57,23 @@
           <Group type="102" alignment="0" attributes="0">
               <Component id="header1" min="-2" pref="206" max="-2" attributes="0"/>
               <EmptySpace min="-2" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="1" attributes="0">
-                  <Group type="102" attributes="0">
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="buttonPrecedent" alignment="3" min="-2" pref="153" max="-2" attributes="0"/>
-                          <Component id="buttonPrecedent1" alignment="3" min="-2" pref="153" max="-2" attributes="0"/>
-                          <Component id="imageRuban" alignment="3" min="-2" pref="153" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="1" attributes="0">
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="bouttonRuban1" min="-2" pref="30" max="-2" attributes="0"/>
-                              <Component id="bouttonRuban3" alignment="1" min="-2" pref="31" max="-2" attributes="0"/>
-                          </Group>
-                          <Component id="bouttonRuban4" min="-2" pref="31" max="-2" attributes="0"/>
-                      </Group>
-                  </Group>
-                  <Component id="bouttonRuban2" min="-2" pref="31" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="buttonPrecedent" alignment="3" min="-2" pref="153" max="-2" attributes="0"/>
+                  <Component id="buttonPrecedent1" alignment="3" min="-2" pref="153" max="-2" attributes="0"/>
+                  <Component id="imageRuban" alignment="3" min="-2" pref="153" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="348" max="32767" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="103" alignment="0" groupAlignment="0" attributes="0">
+                      <Component id="bouttonRuban1" min="-2" pref="30" max="-2" attributes="0"/>
+                      <Component id="bouttonRuban3" alignment="1" min="-2" pref="31" max="-2" attributes="0"/>
+                      <Component id="bouttonRuban4" alignment="1" min="-2" pref="31" max="-2" attributes="0"/>
+                  </Group>
+                  <Component id="bouttonRuban2" min="-2" pref="30" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Component id="jPanel1" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -105,11 +108,6 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bouttonRuban1ActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="bouttonRuban2">
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bouttonRuban2ActionPerformed"/>
-      </Events>
-    </Component>
     <Component class="javax.swing.JButton" name="bouttonRuban3">
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bouttonRuban3ActionPerformed"/>
@@ -122,5 +120,125 @@
     </Component>
     <Component class="afleurdeuxpots802.header.Header" name="header1">
     </Component>
+    <Component class="javax.swing.JButton" name="bouttonRuban2">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bouttonRuban2ActionPerformed"/>
+      </Events>
+    </Component>
+    <Container class="javax.swing.JPanel" name="jPanel1">
+
+      <Layout>
+        <DimensionLayout dim="0">
+          <Group type="103" groupAlignment="0" attributes="0">
+              <Group type="102" alignment="0" attributes="0">
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Group type="102" attributes="0">
+                          <Component id="productView1" min="-2" pref="160" max="-2" attributes="0"/>
+                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                          <Component id="productView6" min="-2" pref="160" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="102" attributes="0">
+                          <Component id="productView5" min="-2" pref="160" max="-2" attributes="0"/>
+                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                          <Component id="productView3" min="-2" pref="160" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
+                  <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Group type="102" attributes="0">
+                          <Component id="productView7" min="-2" pref="160" max="-2" attributes="0"/>
+                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                          <Component id="productView8" min="-2" pref="160" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="102" attributes="0">
+                          <Component id="productView2" min="-2" pref="160" max="-2" attributes="0"/>
+                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                          <Component id="productView4" min="-2" pref="160" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
+              </Group>
+          </Group>
+        </DimensionLayout>
+        <DimensionLayout dim="1">
+          <Group type="103" groupAlignment="0" attributes="0">
+              <Group type="102" alignment="0" attributes="0">
+                  <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                      <Group type="102" attributes="0">
+                          <Component id="productView7" min="-2" pref="220" max="-2" attributes="0"/>
+                          <EmptySpace pref="18" max="32767" attributes="0"/>
+                          <Component id="productView2" min="-2" pref="220" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="102" alignment="0" attributes="0">
+                          <Component id="productView6" min="-2" pref="220" max="-2" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
+                          <Component id="productView3" min="-2" pref="220" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="102" alignment="0" attributes="0">
+                          <Component id="productView1" min="-2" pref="220" max="-2" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
+                          <Component id="productView5" min="-2" pref="220" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="102" attributes="0">
+                          <Component id="productView8" min="-2" pref="220" max="-2" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
+                          <Component id="productView4" min="-2" pref="220" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
+                  <EmptySpace min="0" pref="117" max="32767" attributes="0"/>
+              </Group>
+          </Group>
+        </DimensionLayout>
+      </Layout>
+      <SubComponents>
+        <Component class="afleurdeuxpots802.pages.content.view.ProductView" name="productView1">
+          <Properties>
+            <Property name="name" type="java.lang.String" value="Joli Bouquet" noResource="true"/>
+            <Property name="price" type="java.lang.Double" value="15.2"/>
+          </Properties>
+        </Component>
+        <Component class="afleurdeuxpots802.pages.content.view.ProductView" name="productView2">
+          <Properties>
+            <Property name="name" type="java.lang.String" value="Viens l&#xe0;" noResource="true"/>
+            <Property name="price" type="java.lang.Double" value="52.2"/>
+          </Properties>
+        </Component>
+        <Component class="afleurdeuxpots802.pages.content.view.ProductView" name="productView3">
+          <Properties>
+            <Property name="name" type="java.lang.String" value="Mignone" noResource="true"/>
+            <Property name="price" type="java.lang.Double" value="32.2"/>
+          </Properties>
+        </Component>
+        <Component class="afleurdeuxpots802.pages.content.view.ProductView" name="productView4">
+          <Properties>
+            <Property name="name" type="java.lang.String" value="La fleur du fusil" noResource="true"/>
+            <Property name="price" type="java.lang.Double" value="23.22"/>
+          </Properties>
+        </Component>
+        <Component class="afleurdeuxpots802.pages.content.view.ProductView" name="productView5">
+          <Properties>
+            <Property name="name" type="java.lang.String" value="Je ne la connais pas" noResource="true"/>
+            <Property name="price" type="java.lang.Double" value="66.6"/>
+          </Properties>
+        </Component>
+        <Component class="afleurdeuxpots802.pages.content.view.ProductView" name="productView6">
+          <Properties>
+            <Property name="name" type="java.lang.String" value="Les Fleurs du Male" noResource="true"/>
+            <Property name="price" type="java.lang.Double" value="60.5"/>
+          </Properties>
+        </Component>
+        <Component class="afleurdeuxpots802.pages.content.view.ProductView" name="productView7">
+          <Properties>
+            <Property name="name" type="java.lang.String" value="Pardon" noResource="true"/>
+            <Property name="price" type="java.lang.Double" value="45.3"/>
+          </Properties>
+        </Component>
+        <Component class="afleurdeuxpots802.pages.content.view.ProductView" name="productView8">
+          <Properties>
+            <Property name="name" type="java.lang.String" value="Je t&apos;aime" noResource="true"/>
+            <Property name="price" type="java.lang.Double" value="55.6"/>
+          </Properties>
+        </Component>
+      </SubComponents>
+    </Container>
   </SubComponents>
 </Form>
