--- a/HighFiProtos/AFleurDeuxPots802/src/afleurdeuxpots802/pages/content/ContentFrame.form
+++ b/HighFiProtos/AFleurDeuxPots802/src/afleurdeuxpots802/pages/content/ContentFrame.form
@@ -24,10 +24,15 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
-              <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="contentPanel1" min="-2" max="-2" attributes="0"/>
-                  <Component id="header1" min="-2" pref="913" max="-2" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="header1" min="-2" pref="913" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="196" max="-2" attributes="0"/>
+                      <Component id="contentPanel1" min="-2" max="-2" attributes="0"/>
+                  </Group>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
